add penjabaran masalalh

--- a/h8dsft_Milestone1_jason_rich_darmawan_onggo_putra.ipynb
+++ b/h8dsft_Milestone1_jason_rich_darmawan_onggo_putra.ipynb
@@ -29,28 +29,57 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Topik Permasalahan"
+    "## Topik Permasalahan\n",
+    "\n",
+    "Perbandingan Pembelian Alkohol di Iowa, Amerika Serikat sebelum Pandemi Covid-19 dan puncak (kasus baru per hari) Pandemi Covid-19\n",
+    "\n",
+    "Data sebelum Pandemi Covid-19 yang digunakan adalah bulan Janauri 2018.\n",
+    "\n",
+    "Data Puncak Pandemi Covid-19 yang digunakan adalah bulan Januari 2021."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Problem Statement"
+    "## Problem Statement\n",
+    "\n",
+    "Membuktikan Dampak (Meningkat/Berkurang/Tidak Berdampak) Pandemi Covid-19 terhadap Konsumsi Alkohol di Iowa, Amerika Serikat."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Latar Belakang"
+    "## Latar Belakang\n",
+    "\n",
+    "Saya ingin belajar Hypothesis Testing Two Sample Independent."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Penjabaran Masalah"
+    "## Penjabaran Masalah\n",
+    "\n",
+    "### Hypothesis Testing 1\n",
+    "\n",
+    "- [ ] Apa rata-rata penjualan minuman beralkohol (dalam volume / column `volume_sold_liters`) di Iowa, Amerika Serikat pada bulan Januari 2018 dan 2021 sama/berbeda (lebih kecil/lebih besar)?\n",
+    "- [ ] Apa rata-rata penjualan minuman beralkohol (dalam total harga / column `sale_dollars`) di Iowa, Amerika Serikat pada bulan Januari 2018 dan 2021 sama/berbeda?\n",
+    "\n",
+    "### Visualisasi\n",
+    "\n",
+    "- [ ] Di kota (column `city`) mana penjualan tertinggi (dalam volume / column `volume_sold_liters`) minuman beralkohol di Iowa, Amerika Serikat pada bulan Januari 2018 dan 2021?\n",
+    "- [ ] Di kota (column `city`) mana penjualan tertinggi (dalam total harga / column `sale_dollars`) di Iowa, Amerika Serikat pada bulan Januari 2018 dan 2021?\n",
+    "- [ ] Apa ukuran botol (column `bottle_volume_ml`) yang paling banyak terjual (column `bottles_sold`) di Iowa, Amerika Serikat pada bulan Januari 2018 dan 2021?\n",
+    "\n",
+    "### Hypothesis Testing 2\n",
+    "\n",
+    "- [ ] Apa rata-rata harga minuman beralkohol (column `state_bottle_retail`) di Iowa, Amerika Serikat pada bulan Januari 2018 dan 2021 sama/berbeda?\n",
+    "\n",
+    "### Dugaan Penyebab Perbedaan Rata-rata Penjualan Minuman Beralkohol pada bulan Januari 2018 dan 2021\n",
+    "\n",
+    "- [ ] Apa korelasi harga minimuman beralkohol (column `state_bottle_retail`) dengan jumlah botol terjual (column `bottles_sold`) di Iowa Amerika Serikat pada bulan Januari 2018 dan 2021?"
    ]
   },
   {
@@ -59,6 +88,22 @@
    "source": [
     "# Data Loading\n",
     "\n",
+    "## Import Library"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Reference\n",
     "\n",
     "project: bigquery-public-data\n",
@@ -68,6 +113,10 @@
     "table: sales\n",
     "\n",
     "## Query\n",
+    "\n",
+    "advantage: sub-query agar lebih clean dan lebih mudah ganti tahun dan bulan.\n",
+    "\n",
+    "disadvantage: result sub-query-nya boros (diload hanya untuk difilter di query berikutnya).\n",
     "\n",
     "```\n",
     "SELECT *,\n",
@@ -85,16 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +353,7 @@
        "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,6 +361,81 @@
    "source": [
     "df = pd.read_csv(\"./bigquery-public-data_iowa_liquor_sales_year_2018_and_year_2022_montth_1.csv\")\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>invoice_and_item_number</th>\n",
+       "      <th>date</th>\n",
+       "      <th>store_number</th>\n",
+       "      <th>store_name</th>\n",
+       "      <th>address</th>\n",
+       "      <th>city</th>\n",
+       "      <th>zip_code</th>\n",
+       "      <th>store_location</th>\n",
+       "      <th>county_number</th>\n",
+       "      <th>county</th>\n",
+       "      <th>...</th>\n",
+       "      <th>pack</th>\n",
+       "      <th>bottle_volume_ml</th>\n",
+       "      <th>state_bottle_cost</th>\n",
+       "      <th>state_bottle_retail</th>\n",
+       "      <th>bottles_sold</th>\n",
+       "      <th>sale_dollars</th>\n",
+       "      <th>volume_sold_liters</th>\n",
+       "      <th>volume_sold_gallons</th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>0 rows × 26 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [invoice_and_item_number, date, store_number, store_name, address, city, zip_code, store_location, county_number, county, category, category_name, vendor_number, vendor_name, item_number, item_description, pack, bottle_volume_ml, state_bottle_cost, state_bottle_retail, bottles_sold, sale_dollars, volume_sold_liters, volume_sold_gallons, year, month]\n",
+       "Index: []\n",
+       "\n",
+       "[0 rows x 26 columns]"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Is column invoice_and_item_number value unique?\n",
+    "df.loc[df['invoice_and_item_number'].map(df['invoice_and_item_number'].value_counts()) > 1]\n",
+    "# alternative method:\n",
+    "# df.loc[df['invoice_and_item_number'].duplicated()]"
    ]
   },
   {
