--- a/h8dsft_Milestone1_jason_rich_darmawan_onggo_putra.ipynb
+++ b/h8dsft_Milestone1_jason_rich_darmawan_onggo_putra.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "URL dashboard: #TODO"
+    "#TODO URL dashboard:"
    ]
   },
   {
@@ -62,6 +62,8 @@
    "source": [
     "## Penjabaran Masalah\n",
     "\n",
+    "#TODO penjabaran masalah\n",
+    "\n",
     "### Hypothesis Testing 1\n",
     "\n",
     "- [ ] Apa rata-rata penjualan minuman beralkohol (dalam volume / column `volume_sold_liters`) di Iowa, Amerika Serikat pada bulan Januari 2018 dan 2021 sama/berbeda (lebih kecil/lebih besar)?\n",
@@ -71,7 +73,6 @@
     "\n",
     "- [ ] Di kota (column `city`) mana penjualan tertinggi (dalam volume / column `volume_sold_liters`) minuman beralkohol di Iowa, Amerika Serikat pada bulan Januari 2018 dan 2021?\n",
     "- [ ] Di kota (column `city`) mana penjualan tertinggi (dalam total harga / column `sale_dollars`) di Iowa, Amerika Serikat pada bulan Januari 2018 dan 2021?\n",
-    "- [ ] Apa ukuran botol (column `bottle_volume_ml`) yang paling banyak terjual (column `bottles_sold`) di Iowa, Amerika Serikat pada bulan Januari 2018 dan 2021?\n",
     "\n",
     "### Hypothesis Testing 2\n",
     "\n",
@@ -79,7 +80,13 @@
     "\n",
     "### Dugaan Penyebab Perbedaan Rata-rata Penjualan Minuman Beralkohol pada bulan Januari 2018 dan 2021\n",
     "\n",
-    "- [ ] Apa korelasi harga minimuman beralkohol (column `state_bottle_retail`) dengan jumlah botol terjual (column `bottles_sold`) di Iowa Amerika Serikat pada bulan Januari 2018 dan 2021?"
+    "- [ ] Apa korelasi harga minimuman beralkohol (column `state_bottle_retail`) dengan jumlah botol terjual (column `bottles_sold`) di Iowa Amerika Serikat pada bulan Januari 2018 dan 2021?\n",
+    "- [ ] Apa minuman beralkohol dijual (column `state_bottle_retail`) dibawah biaya produksi (`state_bottle_cost`) di Iowa Amerika Serikat pada bulan Januari 2018 dan 2021?\n",
+    "\n",
+    "### Informasi Lainnya\n",
+    "\n",
+    "- [ ] Apa ukuran botol (column `bottle_volume_ml`) yang paling banyak terjual (column `bottles_sold`) di Iowa, Amerika Serikat pada bulan Januari 2018 dan 2021?\n",
+    "- [ ] Apa kategori minuman beralkohol yang paling banyak terjual (column `bottles_sold`) di Iowa, Amerika Serikat pada bulan Januari 2018 dan 2021?"
    ]
   },
   {
@@ -93,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +141,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"./bigquery-public-data_iowa_liquor_sales_year_2018_and_year_2022_month_1.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## DataFrame.head()\n",
+    "\n",
+    "#TODO drop columns\n",
+    "- can't be visualized nor answer 'Penjabaran Masalah'\n",
+    "  - [ ] `store_number`\n",
+    "  - [ ] `store_name`\n",
+    "  - [ ] `address`\n",
+    "  - [ ] `store_location`\n",
+    "  - [ ] `vendor_number`\n",
+    "  - [ ] `vendor_name`\n",
+    "  - [ ] `item_number`\n",
+    "  - [ ] `item_description`\n",
+    "- too big to derive conclusion from\n",
+    "  - [ ] `county_number`\n",
+    "  - [ ] `county`\n",
+    "- duplicated columns\n",
+    "  - [ ] `volume_sold_gallons`\n",
+    "  - [ ] `year`\n",
+    "  - [ ] `month`\n",
+    "\n",
+    "#TODO sort values by column `date`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +211,12 @@
        "      <th>store_location</th>\n",
        "      <th>county_number</th>\n",
        "      <th>county</th>\n",
-       "      <th>...</th>\n",
+       "      <th>category</th>\n",
+       "      <th>category_name</th>\n",
+       "      <th>vendor_number</th>\n",
+       "      <th>vendor_name</th>\n",
+       "      <th>item_number</th>\n",
+       "      <th>item_description</th>\n",
        "      <th>pack</th>\n",
        "      <th>bottle_volume_ml</th>\n",
        "      <th>state_bottle_cost</th>\n",
@@ -194,7 +242,12 @@
        "      <td>POINT (-90.668138 42.504959)</td>\n",
        "      <td>31.0</td>\n",
        "      <td>DUBUQUE</td>\n",
-       "      <td>...</td>\n",
+       "      <td>1092100.0</td>\n",
+       "      <td>Imported Distilled Spirit Specialty</td>\n",
+       "      <td>55.0</td>\n",
+       "      <td>SAZERAC NORTH AMERICA</td>\n",
+       "      <td>76227</td>\n",
+       "      <td>Montezuma Blue</td>\n",
        "      <td>12</td>\n",
        "      <td>1000</td>\n",
        "      <td>4.66</td>\n",
@@ -218,7 +271,12 @@
        "      <td>POINT (-93.674384 41.59343100000001)</td>\n",
        "      <td>77.0</td>\n",
        "      <td>POLK</td>\n",
-       "      <td>...</td>\n",
+       "      <td>1901200.0</td>\n",
+       "      <td>Special Order Items</td>\n",
+       "      <td>885.0</td>\n",
+       "      <td>YAHARA BAY DISTILLERS INC</td>\n",
+       "      <td>905081</td>\n",
+       "      <td>Yahara Bay Apple Crisp(Apple Pie)</td>\n",
        "      <td>6</td>\n",
        "      <td>200</td>\n",
        "      <td>7.98</td>\n",
@@ -242,7 +300,12 @@
        "      <td>POINT (-91.072733 41.390826)</td>\n",
        "      <td>70.0</td>\n",
        "      <td>MUSCATINE</td>\n",
-       "      <td>...</td>\n",
+       "      <td>1091300.0</td>\n",
+       "      <td>Neutral Grain Spirits Flavored</td>\n",
+       "      <td>346.0</td>\n",
+       "      <td>OLE SMOKY DISTILLERY LLC</td>\n",
+       "      <td>86739</td>\n",
+       "      <td>Ole Smoky Apple Pie Moonshine 70prf Mini</td>\n",
        "      <td>8</td>\n",
        "      <td>50</td>\n",
        "      <td>8.75</td>\n",
@@ -266,7 +329,12 @@
        "      <td>POINT (-93.582179 41.70486400000001)</td>\n",
        "      <td>77.0</td>\n",
        "      <td>POLK</td>\n",
-       "      <td>...</td>\n",
+       "      <td>1091300.0</td>\n",
+       "      <td>Neutral Grain Spirits Flavored</td>\n",
+       "      <td>346.0</td>\n",
+       "      <td>OLE SMOKY DISTILLERY LLC</td>\n",
+       "      <td>986845</td>\n",
+       "      <td>SOOH Ole Smoky Blackberry Moonshine Mini</td>\n",
        "      <td>8</td>\n",
        "      <td>50</td>\n",
        "      <td>8.75</td>\n",
@@ -290,7 +358,12 @@
        "      <td>POINT (-93.787233 41.041472)</td>\n",
        "      <td>20.0</td>\n",
        "      <td>CLARKE</td>\n",
-       "      <td>...</td>\n",
+       "      <td>1011700.0</td>\n",
+       "      <td>Corn Whiskies</td>\n",
+       "      <td>654.0</td>\n",
+       "      <td>Revelton Distilling Company</td>\n",
+       "      <td>26294</td>\n",
+       "      <td>Revelton Shine White Whiskey Mini</td>\n",
        "      <td>6</td>\n",
        "      <td>50</td>\n",
        "      <td>14.40</td>\n",
@@ -304,7 +377,6 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 26 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -329,43 +401,55 @@
        "3   50021.0  POINT (-93.582179 41.70486400000001)           77.0       POLK   \n",
        "4   50213.0          POINT (-93.787233 41.041472)           20.0     CLARKE   \n",
        "\n",
-       "   ...  pack bottle_volume_ml  state_bottle_cost state_bottle_retail  \\\n",
-       "0  ...    12             1000               4.66                6.99   \n",
-       "1  ...     6              200               7.98               11.97   \n",
-       "2  ...     8               50               8.75               13.13   \n",
-       "3  ...     8               50               8.75               13.13   \n",
-       "4  ...     6               50              14.40               21.60   \n",
+       "    category                        category_name  vendor_number  \\\n",
+       "0  1092100.0  Imported Distilled Spirit Specialty           55.0   \n",
+       "1  1901200.0                  Special Order Items          885.0   \n",
+       "2  1091300.0       Neutral Grain Spirits Flavored          346.0   \n",
+       "3  1091300.0       Neutral Grain Spirits Flavored          346.0   \n",
+       "4  1011700.0                        Corn Whiskies          654.0   \n",
        "\n",
-       "   bottles_sold sale_dollars  volume_sold_liters  volume_sold_gallons  year  \\\n",
-       "0            60       419.40               60.00                15.85  2018   \n",
-       "1             6        71.82                1.20                 0.32  2018   \n",
-       "2             3        39.39                0.15                 0.03  2022   \n",
-       "3             4        52.52                0.20                 0.05  2022   \n",
-       "4             6       129.60                0.30                 0.07  2022   \n",
+       "                   vendor_name  item_number  \\\n",
+       "0        SAZERAC NORTH AMERICA        76227   \n",
+       "1    YAHARA BAY DISTILLERS INC       905081   \n",
+       "2     OLE SMOKY DISTILLERY LLC        86739   \n",
+       "3     OLE SMOKY DISTILLERY LLC       986845   \n",
+       "4  Revelton Distilling Company        26294   \n",
        "\n",
-       "   month  \n",
-       "0      1  \n",
-       "1      1  \n",
-       "2      1  \n",
-       "3      1  \n",
-       "4      1  \n",
+       "                           item_description  pack  bottle_volume_ml  \\\n",
+       "0                            Montezuma Blue    12              1000   \n",
+       "1         Yahara Bay Apple Crisp(Apple Pie)     6               200   \n",
+       "2  Ole Smoky Apple Pie Moonshine 70prf Mini     8                50   \n",
+       "3  SOOH Ole Smoky Blackberry Moonshine Mini     8                50   \n",
+       "4         Revelton Shine White Whiskey Mini     6                50   \n",
        "\n",
-       "[5 rows x 26 columns]"
+       "   state_bottle_cost  state_bottle_retail  bottles_sold  sale_dollars  \\\n",
+       "0               4.66                 6.99            60        419.40   \n",
+       "1               7.98                11.97             6         71.82   \n",
+       "2               8.75                13.13             3         39.39   \n",
+       "3               8.75                13.13             4         52.52   \n",
+       "4              14.40                21.60             6        129.60   \n",
+       "\n",
+       "   volume_sold_liters  volume_sold_gallons  year  month  \n",
+       "0               60.00                15.85  2018      1  \n",
+       "1                1.20                 0.32  2018      1  \n",
+       "2                0.15                 0.03  2022      1  \n",
+       "3                0.20                 0.05  2022      1  \n",
+       "4                0.30                 0.07  2022      1  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(\"./bigquery-public-data_iowa_liquor_sales_year_2018_and_year_2022_montth_1.csv\")\n",
+    "pd.options.display.max_columns = None\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +483,12 @@
        "      <th>store_location</th>\n",
        "      <th>county_number</th>\n",
        "      <th>county</th>\n",
-       "      <th>...</th>\n",
+       "      <th>category</th>\n",
+       "      <th>category_name</th>\n",
+       "      <th>vendor_number</th>\n",
+       "      <th>vendor_name</th>\n",
+       "      <th>item_number</th>\n",
+       "      <th>item_description</th>\n",
        "      <th>pack</th>\n",
        "      <th>bottle_volume_ml</th>\n",
        "      <th>state_bottle_cost</th>\n",
@@ -415,18 +504,15 @@
        "  <tbody>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>0 rows × 26 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "Empty DataFrame\n",
        "Columns: [invoice_and_item_number, date, store_number, store_name, address, city, zip_code, store_location, county_number, county, category, category_name, vendor_number, vendor_name, item_number, item_description, pack, bottle_volume_ml, state_bottle_cost, state_bottle_retail, bottles_sold, sale_dollars, volume_sold_liters, volume_sold_gallons, year, month]\n",
-       "Index: []\n",
-       "\n",
-       "[0 rows x 26 columns]"
+       "Index: []"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,6 +522,204 @@
     "df.loc[df['invoice_and_item_number'].map(df['invoice_and_item_number'].value_counts()) > 1]\n",
     "# alternative method:\n",
     "# df.loc[df['invoice_and_item_number'].duplicated()]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## DataFrame.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['invoice_and_item_number', 'date', 'store_number', 'store_name',\n",
+       "       'address', 'city', 'zip_code', 'store_location', 'county_number',\n",
+       "       'county', 'category', 'category_name', 'vendor_number', 'vendor_name',\n",
+       "       'item_number', 'item_description', 'pack', 'bottle_volume_ml',\n",
+       "       'state_bottle_cost', 'state_bottle_retail', 'bottles_sold',\n",
+       "       'sale_dollars', 'volume_sold_liters', 'volume_sold_gallons', 'year',\n",
+       "       'month'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Column `category_name` Values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Float64Index([1031100.0, 1012100.0, 1011200.0, 1081600.0, 1062400.0, 1031200.0,\n",
+       "              1011100.0, 1081400.0, 1051100.0, 1032100.0, 1022200.0, 1011400.0,\n",
+       "              1081200.0, 1081300.0, 1071100.0, 1062200.0, 1062500.0, 1082000.0,\n",
+       "              1022100.0, 1032200.0, 1082200.0, 1041100.0, 1012200.0, 1052100.0,\n",
+       "              1701100.0, 1012400.0, 1042100.0, 1012300.0, 1011600.0, 1081100.0,\n",
+       "              1062100.0, 1091300.0, 1062300.0, 1081500.0, 1091100.0, 1011300.0,\n",
+       "              1091200.0, 1011500.0, 1901200.0, 1092100.0, 1082100.0, 1011700.0,\n",
+       "              1700000.0, 1041200.0, 1022300.0, 1041300.0, 1091400.0, 1031000.0,\n",
+       "              1090000.0, 1091000.0, 1092000.0, 1042000.0, 1032000.0, 1070000.0,\n",
+       "              1081000.0],\n",
+       "             dtype='float64')"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['category'].value_counts().index"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Column `city` Values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Des Moines', 'Cedar Rapids', 'Davenport', 'Waterloo', 'Sioux City',\n",
+       "       'West Des Moines', 'Ames', 'Council Bluffs', 'Dubuque', 'Iowa City',\n",
+       "       ...\n",
+       "       'Casey', 'Roland', 'Ossian', 'Melbourne', 'Bussey', 'Stanwood',\n",
+       "       'Fontanelle', 'Blairstown', 'Earling', 'Colorado Springs'],\n",
+       "      dtype='object', length=444)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['city'].value_counts().index"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Column `bottle_volume_ml` Values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Int64Index([  20,   50,  100,  200,  300,  375,  400,  500,  600,  700,  750,\n",
+       "             800,  850,  900,  950, 1000, 1200, 1750, 1800, 1950, 2250, 2400,\n",
+       "            3000, 3500, 4500, 5250, 6000],\n",
+       "           dtype='int64')"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['bottle_volume_ml'].value_counts().index.sort_values()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## DataFrame.info()\n",
+    "\n",
+    "#TODO handle null rows on columns\n",
+    "\n",
+    "range index: 373231 entries\n",
+    "\n",
+    "- [ ] `city`            372256\n",
+    "- [ ] `zip_code`        372256\n",
+    "- [ ] `category`        373094\n",
+    "- [ ] `category_name`   373094"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 373231 entries, 0 to 373230\n",
+      "Data columns (total 26 columns):\n",
+      " #   Column                   Non-Null Count   Dtype  \n",
+      "---  ------                   --------------   -----  \n",
+      " 0   invoice_and_item_number  373231 non-null  object \n",
+      " 1   date                     373231 non-null  object \n",
+      " 2   store_number             373231 non-null  int64  \n",
+      " 3   store_name               373231 non-null  object \n",
+      " 4   address                  372256 non-null  object \n",
+      " 5   city                     372256 non-null  object \n",
+      " 6   zip_code                 372256 non-null  float64\n",
+      " 7   store_location           335493 non-null  object \n",
+      " 8   county_number            372254 non-null  float64\n",
+      " 9   county                   372256 non-null  object \n",
+      " 10  category                 373094 non-null  float64\n",
+      " 11  category_name            373094 non-null  object \n",
+      " 12  vendor_number            373231 non-null  float64\n",
+      " 13  vendor_name              373231 non-null  object \n",
+      " 14  item_number              373231 non-null  int64  \n",
+      " 15  item_description         373231 non-null  object \n",
+      " 16  pack                     373231 non-null  int64  \n",
+      " 17  bottle_volume_ml         373231 non-null  int64  \n",
+      " 18  state_bottle_cost        373231 non-null  float64\n",
+      " 19  state_bottle_retail      373231 non-null  float64\n",
+      " 20  bottles_sold             373231 non-null  int64  \n",
+      " 21  sale_dollars             373231 non-null  float64\n",
+      " 22  volume_sold_liters       373231 non-null  float64\n",
+      " 23  volume_sold_gallons      373231 non-null  float64\n",
+      " 24  year                     373231 non-null  int64  \n",
+      " 25  month                    373231 non-null  int64  \n",
+      "dtypes: float64(9), int64(7), object(10)\n",
+      "memory usage: 74.0+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
    ]
   },
   {
