--- a/h8dsft_Milestone1_jason_rich_darmawan_onggo_putra.ipynb
+++ b/h8dsft_Milestone1_jason_rich_darmawan_onggo_putra.ipynb
@@ -155,24 +155,15 @@
     "## DataFrame.head()\n",
     "\n",
     "#TODO drop columns\n",
-    "- can't be visualized nor answer 'Penjabaran Masalah'\n",
-    "  - [ ] `store_number`\n",
-    "  - [ ] `store_name`\n",
-    "  - [ ] `address`\n",
-    "  - [ ] `store_location`\n",
-    "  - [ ] `vendor_number`\n",
-    "  - [ ] `vendor_name`\n",
-    "  - [ ] `item_number`\n",
-    "  - [ ] `item_description`\n",
+    "- [x] can't be visualized nor answer 'Penjabaran Masalah'\n",
+    "  `store_number`, `store_name`, `address`, `store_location`, `vendor_number`, `vendor_name`, `item_number`, `item_description`\n",
     "- too big to derive conclusion from\n",
-    "  - [ ] `county_number`\n",
-    "  - [ ] `county`\n",
+    "  `county_number`, `county`\n",
     "- duplicated columns\n",
-    "  - [ ] `volume_sold_gallons`\n",
-    "  - [ ] `year`\n",
-    "  - [ ] `month`\n",
+    "  `volume_sold_gallons`, `year`, `month`\n",
     "\n",
-    "#TODO sort values by column `date`"
+    "#TODO DataFrame.sort_values() \n",
+    "- [x] by column `date`"
    ]
   },
   {
@@ -727,6 +718,28 @@
    "metadata": {},
    "source": [
     "# Data Cleaning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2 = df.sort_values('date').reset_index(drop=True).copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df3 = df2.drop(['store_number', 'store_name', 'address', 'store_location', \n",
+    "                'vendor_number', 'vendor_name', 'item_number', 'item_description', \n",
+    "                'county_number', 'county', 'volume_sold_gallons', 'year', 'month'], \n",
+    "                axis='columns') \\\n",
+    "         .copy()"
    ]
   },
   {
