add todo outlier

--- a/h8dsft_Milestone1_jason_rich_darmawan_onggo_putra.ipynb
+++ b/h8dsft_Milestone1_jason_rich_darmawan_onggo_putra.ipynb
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -609,7 +609,7 @@
        "      dtype='object', length=444)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -646,6 +646,232 @@
    ],
    "source": [
     "df['bottle_volume_ml'].value_counts().index.sort_values()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## DataFrame.describe()\n",
+    "\n",
+    "#TODO detecting and treating outliers on columns\n",
+    "\n",
+    "- [ ] `pack`\n",
+    "- [ ] `bottle_volume_ml`\n",
+    "- [ ] `state_bottle_cost`\n",
+    "- [ ] `state_bottle_retail`,\n",
+    "- [ ] `bottles_sold`\n",
+    "- [ ] `sale_dollars`, \n",
+    "- [ ] `volume_sold_liters`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "column pack, lower limit -12.0 > min 1, upper limit 30.0 < max 60\n",
+      "column bottle_volume_ml, lower limit 375.0 > min 20, upper limit 1375.0 < max 6000\n",
+      "column state_bottle_cost, lower limit -17.0 > min 0.89, upper limit 35.5 < max 1949.02\n",
+      "column state_bottle_retail, lower limit -25.5 > min 1.34, upper limit 53.25 < max 2923.53\n",
+      "column bottles_sold, lower limit -24.0 > min 1, upper limit 39.0 < max 13200\n",
+      "column sale_dollars, lower limit -307.68 > min 0.0, upper limit 490.74 < max 250932.0\n",
+      "column volume_sold_liters, lower limit -25.5 > min 0.02, upper limit 37.5 < max 13200.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "def calculateLowerLimitUpperLimit(strategy: int, column: str):\n",
+    "    match strategy:\n",
+    "        # normal distribution\n",
+    "        case 0:\n",
+    "            mean, std = df.loc[:, column].agg(['mean', 'std'])\n",
+    "            return mean - 3 * std, mean + 3 * std\n",
+    "        # skewed distribution\n",
+    "        case 1:\n",
+    "            q1, q3 = df.loc[:, column].quantile([.25,.75])\n",
+    "            iqr = q3 - q1\n",
+    "            return q1 - iqr * 1.5, q3 + iqr * 1.5\n",
+    "        # extreme skewed distribution\n",
+    "        case 2:\n",
+    "            q1, q3 = df.loc[:, column].quantile([.25, .75])\n",
+    "            iqr = q3 - q1\n",
+    "            return q1 - iqr * 3, q3 + iqr * 3\n",
+    "        case _:\n",
+    "            raise NotImplementedError\n",
+    "\n",
+    "\n",
+    "for index, value in df.loc[:,['pack', 'bottle_volume_ml', 'state_bottle_cost', 'state_bottle_retail', \n",
+    "    'bottles_sold', 'sale_dollars', 'volume_sold_liters']].skew().items():\n",
+    "    # skewed distribution\n",
+    "    if value < -0.5 or value > 0.5:\n",
+    "        if value < -1 or value > 1:\n",
+    "            lowerLimit, upperLimit = calculateLowerLimitUpperLimit(2, index)\n",
+    "        else:\n",
+    "            lowerLimit, upperLimit = calculateLowerLimitUpperLimit(1, index)\n",
+    "    # normal distribution\n",
+    "    else:\n",
+    "        lowerLimit, upperLimit = calculateLowerLimitUpperLimit(0, index)\n",
+    "\n",
+    "    min, max = df.loc[:, index].agg(['min', 'max'])\n",
+    "    if lowerLimit > min or upperLimit < max:\n",
+    "        print(\"column {0}, lower limit {1} > min {2}, upper limit {3} < max {4}\" \\\n",
+    "                .format(index, lowerLimit, min, upperLimit, max))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pack</th>\n",
+       "      <th>bottle_volume_ml</th>\n",
+       "      <th>state_bottle_cost</th>\n",
+       "      <th>state_bottle_retail</th>\n",
+       "      <th>bottles_sold</th>\n",
+       "      <th>sale_dollars</th>\n",
+       "      <th>volume_sold_liters</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>373231.000000</td>\n",
+       "      <td>373231.000000</td>\n",
+       "      <td>373231.000000</td>\n",
+       "      <td>373231.000000</td>\n",
+       "      <td>373231.000000</td>\n",
+       "      <td>373231.000000</td>\n",
+       "      <td>373231.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>12.293054</td>\n",
+       "      <td>863.893674</td>\n",
+       "      <td>10.675001</td>\n",
+       "      <td>16.014474</td>\n",
+       "      <td>10.418441</td>\n",
+       "      <td>134.513251</td>\n",
+       "      <td>8.260086</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>7.919978</td>\n",
+       "      <td>515.690884</td>\n",
+       "      <td>10.460707</td>\n",
+       "      <td>15.691036</td>\n",
+       "      <td>32.321439</td>\n",
+       "      <td>546.079015</td>\n",
+       "      <td>34.168744</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>20.000000</td>\n",
+       "      <td>0.890000</td>\n",
+       "      <td>1.340000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.020000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>750.000000</td>\n",
+       "      <td>5.500000</td>\n",
+       "      <td>8.250000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>34.500000</td>\n",
+       "      <td>1.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>12.000000</td>\n",
+       "      <td>750.000000</td>\n",
+       "      <td>8.500000</td>\n",
+       "      <td>12.750000</td>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>76.560000</td>\n",
+       "      <td>4.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>12.000000</td>\n",
+       "      <td>1000.000000</td>\n",
+       "      <td>13.000000</td>\n",
+       "      <td>19.500000</td>\n",
+       "      <td>12.000000</td>\n",
+       "      <td>148.560000</td>\n",
+       "      <td>10.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>60.000000</td>\n",
+       "      <td>6000.000000</td>\n",
+       "      <td>1949.020000</td>\n",
+       "      <td>2923.530000</td>\n",
+       "      <td>13200.000000</td>\n",
+       "      <td>250932.000000</td>\n",
+       "      <td>13200.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                pack  bottle_volume_ml  state_bottle_cost  \\\n",
+       "count  373231.000000     373231.000000      373231.000000   \n",
+       "mean       12.293054        863.893674          10.675001   \n",
+       "std         7.919978        515.690884          10.460707   \n",
+       "min         1.000000         20.000000           0.890000   \n",
+       "25%         6.000000        750.000000           5.500000   \n",
+       "50%        12.000000        750.000000           8.500000   \n",
+       "75%        12.000000       1000.000000          13.000000   \n",
+       "max        60.000000       6000.000000        1949.020000   \n",
+       "\n",
+       "       state_bottle_retail   bottles_sold   sale_dollars  volume_sold_liters  \n",
+       "count        373231.000000  373231.000000  373231.000000       373231.000000  \n",
+       "mean             16.014474      10.418441     134.513251            8.260086  \n",
+       "std              15.691036      32.321439     546.079015           34.168744  \n",
+       "min               1.340000       1.000000       0.000000            0.020000  \n",
+       "25%               8.250000       3.000000      34.500000            1.500000  \n",
+       "50%              12.750000       6.000000      76.560000            4.500000  \n",
+       "75%              19.500000      12.000000     148.560000           10.500000  \n",
+       "max            2923.530000   13200.000000  250932.000000        13200.000000  "
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[['pack','bottle_volume_ml', 'state_bottle_cost', 'state_bottle_retail', 'bottles_sold', 'sale_dollars', 'volume_sold_liters']].describe()"
    ]
   },
   {
@@ -741,6 +967,20 @@
     "                axis='columns') \\\n",
     "         .copy()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Outliers Detection and Treatment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
